@@ -1,3 +1,8 @@
+2007-11-28  Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy-gtk/empathy-private-chat.c: Request new Text Channel if
+	the contact is online again and CM don't support offline message.
+
 2007-11-22  Xavier Claessens  <xclaesse@gmail.com>
 
 	* libempathy-gtk/empathy-group-chat.c: use ":" instead of "," for nick
